--- a/index.html
+++ b/index.html
@@ -1,10 +1,53 @@
 <!DOCTYPE html>
-<html>
-   <head>
-      <title>My Cool Website</title>
-   </head>
-   <body>
-      <h1>Welcome to my website! ⭐️</h1>
-      <p>How was your day? 🎉</p>
-   </body>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>SweetSymphony</title>
+  <link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nickainley&display=swap">
+
+</head>
+<body>
+<header>
+    <div class="header-content">
+      <div class="header-left">
+        <h1 class="title">SweetSymphony</h1>
+      </div>
+      <div class="header-right">
+        <a href="#" class="header-icon">
+          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+            <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-1 15h2v-2h-2v2zm0-4h2V7h-2v6z"/>
+          </svg>
+        </a>
+        <a href="#" class="header-icon">
+          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+            <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-1 15h2v-2h-2v2zm0-4h2V7h-2v6z"/>
+          </svg>
+        </a>
+      </div>
+    </div>
+  </header>
+  <main>
+    <section class="image-menu">
+      <div class="image">
+        <a href="#"><img src="images/1.png" alt="Image 1"></a>
+      </div>
+      <div class="image">
+        <a href="#"><img src="images/2.png" alt="Image 2"></a>
+      </div>
+    </section>
+  </main>
+
+  <footer>
+    <div class="footer-left">
+      <p>&copy; 2023 SweetSymphony.org</p>
+    </div>
+    <div class="footer-right">
+      <p>Email: contact@sweetsymphony.org</p>
+      <a href="https://www.instagram.com/sweet.symphony.2023" target="_blank" rel="noopener noreferrer" class="social-icon">
+        <img src="images/instagram.png" alt="Instagram">
+      </a>
+    </div>
+  </footer>
+</body>
 </html>
