--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <p>&copy; 2023 SweetSymphony.org</p>
     </div>
     <div class="footer-right">
-      <p>Email: contact@sweetsymphony.org</p>
+      <p>Email: sweetsymphony2k23@gmail.com</p>
       <a href="https://www.instagram.com/sweet.symphony.2023" target="_blank" rel="noopener noreferrer" class="social-icon">
         <img src="images/instagram.png" alt="Instagram">
       </a>
