--- a/index.html
+++ b/index.html
@@ -26,14 +26,6 @@
 
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
-
-  <!-- =======================================================
-  * Template Name: Delicious
-  * Updated: Sep 18 2023 with Bootstrap v5.3.2
-  * Template URL: https://bootstrapmade.com/delicious-free-restaurant-bootstrap-theme/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
 </head>
 
 <body>
@@ -41,8 +33,8 @@
   <!-- ======= Top Bar ======= -->
   <section id="topbar" class="d-flex align-items-center fixed-top topbar-transparent">
     <div class="container-fluid container-xl d-flex align-items-center justify-content-center justify-content-lg-start">
-      <i class="bi bi-phone d-flex align-items-center"><span>+1 5589 55488 55</span></i>
-      <i class="bi bi-clock ms-4 d-none d-lg-flex align-items-center"><span>Mon-Sat: 11:00 AM - 23:00 PM</span></i>
+      <i class="bi bi-phone d-flex align-items-center"><span>+1 4849 9510 87</span></i>
+      <i class="bi bi-clock ms-4 d-none d-lg-flex align-items-center"><span>Mon-Sat: 11:00 AM - 21:00 PM</span></i>
     </div>
   </section>
 
@@ -51,7 +43,9 @@
     <div class="container-fluid container-xl d-flex align-items-center justify-content-between">
 
       <div class="logo me-auto">
-        <h1><a href="index.html">SweetSymphony</a></h1>
+        <h1>
+          <a class="rounded" href="#"><img alt="Brand" src="assets/img/logo.png" class="img-responsive" /></a>
+        </h1>
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
       </div>
@@ -251,16 +245,16 @@
           <div class="col-lg-12 d-flex justify-content-center">
             <ul id="menu-flters">
               <li data-filter="*" class="filter-active">Show All</li>
-              <li data-filter=".filter-starters">Starters</li>
-              <li data-filter=".filter-salads">Salads</li>
-              <li data-filter=".filter-specialty">Specialty</li>
+              <li data-filter=".filter-solid">Solid</li>
+              <li data-filter=".filter-creamy">Creamy</li>
+              <li data-filter=".filter-snacks">Snacks</li>
             </ul>
           </div>
         </div>
 
         <div class="row menu-container">
 
-          <div class="col-lg-6 menu-item filter-starters">
+          <div class="col-lg-6 menu-item filter-solid">
             <div class="menu-content">
               <a href="#">Gulab Jamun</a><span>$1.50/pc</span>
             </div>
@@ -269,70 +263,70 @@
             </div>
           </div>
 
-          <div class="col-lg-6 menu-item filter-specialty">
+          <div class="col-lg-6 menu-item filter-solid">
             <div class="menu-content">
               <a href="#">Lyangcha</a><span>$2.0/pc</span>
             </div>
             <div class="menu-ingredients">Lyangcha, the twisted syrupy indulgence from Bengal's culinary treasury!</div>
           </div>
 
-          <div class="col-lg-6 menu-item filter-starters">
+          <div class="col-lg-6 menu-item filter-solid">
             <div class="menu-content">
               <a href="#">Kheer Kadam</a><span>$2.00/pc</span>
             </div>
             <div class="menu-ingredients">Kheer Kadam, a delectable dance of creamy kheer wrapped in sweetened perfection!</div>
           </div>
 
-          <div class="col-lg-6 menu-item filter-salads">
+          <div class="col-lg-6 menu-item filter-solid">
             <div class="menu-content">
               <a href="#">Kacha Golla</a><span>$2.00/pc</span>
             </div>
             <div class="menu-ingredients">Kacha Golla, the soft, velvety orbs of heavenly sweetness from Bengal's treats!</div>
           </div>
 
-          <div class="col-lg-6 menu-item filter-specialty">
+          <div class="col-lg-6 menu-item filter-solid">
             <div class="menu-content">
               <a href="#">Malai Chop</a><span>$2.50/pc</span>
             </div>
             <div class="menu-ingredients">Malai Chop, the decadent symphony of creamy richness wrapped in delectable delight!</div>
           </div>
 
-          <div class="col-lg-6 menu-item filter-starters">
+          <div class="col-lg-6 menu-item filter-solid">
             <div class="menu-content">
               <a href="#">Kheer Sandwich</a><span>$2.00/pc</span>
             </div>
             <div class="menu-ingredients">Kheer Sandwich, where creamy nostalgia meets sweet layers, a fusion delight in every bite!</div>
           </div>
 
-          <div class="col-lg-6 menu-item filter-salads">
+          <div class="col-lg-6 menu-item filter-solid">
             <div class="menu-content">
               <a href="#">Carrot Sandesh</a><span>$2.00/pc</span>
             </div>
             <div class="menu-ingredients">Carrot Sandesh, a delightful blend where sweetness meets the essence of fresh carrots in every soft, delectable bite!</div>
           </div>
 
-          <div class="col-lg-6 menu-item filter-salads">
+          <div class="col-lg-6 menu-item filter-solid">
             <div class="menu-content">
               <a href="#">Kalakand</a><span>$2.00/pc</span>
             </div>
             <div class="menu-ingredients">Kalakand, a milky delight with a grainy charm, embodies sweet simplicity in every bite.</div>
           </div>
 
-          <div class="col-lg-6 menu-item filter-specialty">
+          <div class="col-lg-6 menu-item filter-solid">
             <div class="menu-content">
               <a href="#">Chomchom</a><span>$2.00/pc</span>
             </div>
             <div class="menu-ingredients">Chomchom, the tender pillows of spongy sweetness, soaked in syrupy perfection, a Bengali delight to savor!</div>
           </div>
 
-          <div class="col-lg-6 menu-item filter-specialty">
+          <div class="col-lg-6 menu-item filter-solid">
             <div class="menu-content">
               <a href="#">Malai Chomchom</a><span>$2.50/pc</span>
             </div>
             <div class="menu-ingredients">Chomchom, the tender pillows of spongy sweetness, soaked in syrupy perfection, a Bengali delight to savor!</div>
           </div>
 
-          <div class="col-lg-6 menu-item filter-specialty">
+          <div class="col-lg-6 menu-item filter-solid">
             <div class="menu-content">
               <a href="#">Dry Fruit Laddoo</a><span>$2.00/pc</span>
             </div>
@@ -340,7 +334,7 @@
           </div>
 
 
-          <div class="col-lg-6 menu-item filter-specialty">
+          <div class="col-lg-6 menu-item filter-solid">
             <div class="menu-content">
               <a href="#">Dates & Dry Fruit Barfi</a><span>$2.50/pc</span>
             </div>
@@ -348,7 +342,7 @@
           </div>
 
 
-          <div class="col-lg-6 menu-item filter-specialty">
+          <div class="col-lg-6 menu-item filter-solid">
             <div class="menu-content">
               <a href="#">Classic Jalebi</a><span>$12.00 for 500gm</span>
             </div>
@@ -356,7 +350,7 @@
           </div>
 
 
-          <div class="col-lg-6 menu-item filter-specialty">
+          <div class="col-lg-6 menu-item filter-solid">
             <div class="menu-content">
               <a href="#">Bonde</a><span>$10.00 for 500gm</span>
             </div>
