--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     <div class="hero-container">
       <div id="heroCarousel" data-bs-interval="5000" class="carousel slide carousel-fade" data-bs-ride="carousel">
 
-        <ol class="carousel-indicators" id="hero-carousel-indicators"></ol>
+        <!--ol class="carousel-indicators" id="hero-carousel-indicators"></ol-->
 
         <div class="carousel-inner" role="listbox">
 
@@ -103,14 +103,14 @@
                 <p class="animate__animated animate__fadeInUp">Bringing happiness, one batch of sugary delights at a time. Sharing joy through every sugary bite – it's our sweet mission!</p>
                 <div>
                   <a href="#menu" class="btn-menu animate__animated animate__fadeInUp scrollto">Our Menu</a>
-                  <!--a href="#book-a-table" class="btn-book animate__animated animate__fadeInUp scrollto">Book a Table</a>
+                  <!--a href="#book-a-table" class="btn-book animate__animated animate__fadeInUp scrollto">Book a Table</a-->
                 </div>
               </div>
             </div>
           </div>
 
           <!-- Slide 2 -->
-          <div class="carousel-item" style="background-image: url(assets/img/slide/slide-2.jpg);">
+          <!--div class="carousel-item" style="background-image: url(assets/img/slide/slide-2.jpg);">
             <div class="carousel-container">
               <div class="carousel-content">
                 <h2 class="animate__animated animate__fadeInDown">Lorem Ipsum Dolor</h2>
@@ -121,10 +121,10 @@
                 </div>
               </div>
             </div>
-          </div>
+          </div-->
 
           <!-- Slide 3 -->
-          <div class="carousel-item" style="background-image: url(assets/img/slide/slide-3.jpg);">
+          <!--div class="carousel-item" style="background-image: url(assets/img/slide/slide-3.jpg);">
             <div class="carousel-container">
               <div class="carousel-content">
                 <h2 class="animate__animated animate__fadeInDown">Sequi ea ut et est quaerat</h2>
@@ -135,7 +135,7 @@
                 </div>
               </div>
             </div>
-          </div>
+          </div-->
 
         </div>
 
