Adding bengali names and favicon

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     <div class="hero-container">
       <div id="heroCarousel" data-bs-interval="5000" class="carousel slide carousel-fade" data-bs-ride="carousel">
 
-        <!--ol class="carousel-indicators" id="hero-carousel-indicators"></ol-->
+        <ol class="carousel-indicators" id="hero-carousel-indicators"></ol>
 
         <div class="carousel-inner" role="listbox">
 
@@ -259,7 +259,7 @@
               <a href="#">Gulab Jamun</a><span>$1.50/pc</span>
             </div>
             <div class="menu-ingredients">
-              Golden orbs of syrup-soaked delight: Gulab Jamun, sweet and divine!
+              <strong>গোলাপ জামুন </strong>- Golden orbs of syrup-soaked delight: Gulab Jamun, sweet and divine!
             </div>
           </div>
 
@@ -267,70 +267,70 @@
             <div class="menu-content">
               <a href="#">Lyangcha</a><span>$2.0/pc</span>
             </div>
-            <div class="menu-ingredients">Lyangcha, the twisted syrupy indulgence from Bengal's culinary treasury!</div>
+            <div class="menu-ingredients"><strong>ল্যাংচা </strong>- Lyangcha, the twisted syrupy indulgence from Bengal's culinary treasury!</div>
           </div>
 
           <div class="col-lg-6 menu-item filter-solid">
             <div class="menu-content">
               <a href="#">Kheer Kadam</a><span>$2.00/pc</span>
             </div>
-            <div class="menu-ingredients">Kheer Kadam, a delectable dance of creamy kheer wrapped in sweetened perfection!</div>
+            <div class="menu-ingredients"><strong>খীর কদম </strong>- Kheer Kadam, a delectable dance of creamy kheer wrapped in sweetened perfection!</div>
           </div>
 
           <div class="col-lg-6 menu-item filter-solid">
             <div class="menu-content">
               <a href="#">Kacha Golla</a><span>$2.00/pc</span>
             </div>
-            <div class="menu-ingredients">Kacha Golla, the soft, velvety orbs of heavenly sweetness from Bengal's treats!</div>
+            <div class="menu-ingredients"><strong>কাঁচা গোল্লা </strong>- Kacha Golla, the soft, velvety orbs of heavenly sweetness from Bengal's treats!</div>
           </div>
 
           <div class="col-lg-6 menu-item filter-solid">
             <div class="menu-content">
               <a href="#">Malai Chop</a><span>$2.50/pc</span>
             </div>
-            <div class="menu-ingredients">Malai Chop, the decadent symphony of creamy richness wrapped in delectable delight!</div>
+            <div class="menu-ingredients"><strong>মালাই চপ </strong>- Malai Chop, the decadent symphony of creamy richness wrapped in delectable delight!</div>
           </div>
 
           <div class="col-lg-6 menu-item filter-solid">
             <div class="menu-content">
               <a href="#">Kheer Sandwich</a><span>$2.00/pc</span>
             </div>
-            <div class="menu-ingredients">Kheer Sandwich, where creamy nostalgia meets sweet layers, a fusion delight in every bite!</div>
+            <div class="menu-ingredients"><strong>খীর স্যান্ডউইচ </strong>- Kheer Sandwich, where creamy nostalgia meets sweet layers, a fusion delight in every bite!</div>
           </div>
 
           <div class="col-lg-6 menu-item filter-solid">
             <div class="menu-content">
               <a href="#">Carrot Sandesh</a><span>$2.00/pc</span>
             </div>
-            <div class="menu-ingredients">Carrot Sandesh, a delightful blend where sweetness meets the essence of fresh carrots in every soft, delectable bite!</div>
+            <div class="menu-ingredients"><strong>গাজরের সন্দেশ </strong>- Carrot Sandesh, a delightful blend where sweetness meets the essence of fresh carrots in every soft, delectable bite!</div>
           </div>
 
           <div class="col-lg-6 menu-item filter-solid">
             <div class="menu-content">
               <a href="#">Kalakand</a><span>$2.00/pc</span>
             </div>
-            <div class="menu-ingredients">Kalakand, a milky delight with a grainy charm, embodies sweet simplicity in every bite.</div>
+            <div class="menu-ingredients"><strong>কালাকান্দ </strong>- Kalakand, a milky delight with a grainy charm, embodies sweet simplicity in every bite.</div>
           </div>
 
           <div class="col-lg-6 menu-item filter-solid">
             <div class="menu-content">
               <a href="#">Chomchom</a><span>$2.00/pc</span>
             </div>
-            <div class="menu-ingredients">Chomchom, the tender pillows of spongy sweetness, soaked in syrupy perfection, a Bengali delight to savor!</div>
+            <div class="menu-ingredients"><strong>চমচম </strong>- Chomchom, the tender pillows of spongy sweetness, soaked in syrupy perfection, a Bengali delight to savor!</div>
           </div>
 
           <div class="col-lg-6 menu-item filter-solid">
             <div class="menu-content">
               <a href="#">Malai Chomchom</a><span>$2.50/pc</span>
             </div>
-            <div class="menu-ingredients">Chomchom, the tender pillows of spongy sweetness, soaked in syrupy perfection, a Bengali delight to savor!</div>
+            <div class="menu-ingredients"><strong>মালাই চমচম </strong>- Chomchom, the tender pillows of spongy sweetness, soaked in syrupy perfection, a Bengali delight to savor!</div>
           </div>
 
           <div class="col-lg-6 menu-item filter-solid">
             <div class="menu-content">
               <a href="#">Dry Fruit Laddoo</a><span>$2.00/pc</span>
             </div>
-            <div class="menu-ingredients">Dry Fruit Laddoo, a nutty sweetness rolled into petite spheres, a bite-sized joy for any craving!</div>
+            <div class="menu-ingredients"><strong>ড্রাই ফ্রুট লড্ডু </strong>- Dry Fruit Laddoo, a nutty sweetness rolled into petite spheres, a bite-sized joy for any craving!</div>
           </div>
 
 
@@ -338,7 +338,7 @@
             <div class="menu-content">
               <a href="#">Dates & Dry Fruit Barfi</a><span>$2.50/pc</span>
             </div>
-            <div class="menu-ingredients">Dates & Dry Fruit Barfi, a compact indulgence packed with the wholesome richness of dates and nuts, a tiny square of delight!</div>
+            <div class="menu-ingredients"><strong>খেজুর ও ড্রাই ফ্রুট বরফি </strong>- Dates & Dry Fruit Barfi, a compact indulgence packed with the wholesome richness of dates and nuts, a tiny square of delight!</div>
           </div>
 
 
@@ -346,7 +346,7 @@
             <div class="menu-content">
               <a href="#">Classic Jalebi</a><span>$12.00 for 500gm</span>
             </div>
-            <div class="menu-ingredients">Jalebi, those crispy, syrupy spirals, a tiny burst of sweet joy in every twist!</div>
+            <div class="menu-ingredients"><strong>জিলিপি </strong>- Jalebi, those crispy, syrupy spirals, a tiny burst of sweet joy in every twist!</div>
           </div>
 
 
@@ -354,7 +354,63 @@
             <div class="menu-content">
               <a href="#">Bonde</a><span>$10.00 for 500gm</span>
             </div>
-            <div class="menu-ingredients">Bonde, the tiny golden globes of crispiness and sweetness, a pop of delight in every bite!</div>
+            <div class="menu-ingredients"><strong>বুন্দি </strong>- Bonde, the tiny golden globes of crispiness and sweetness, a pop of delight in every bite!</div>
+          </div>
+
+          <div class="col-lg-6 menu-item filter-creamy">
+            <div class="menu-content">
+              <a href="#">Misti Doi</a><span>$12.00 for 500gm</span>
+            </div>
+            <div class="menu-ingredients"><strong>মিষ্টি দই </strong>- Bengal's treasured delight: Mishti Doi, a golden-hued, creamy sweetness capturing hearts effortlessly</div>
+          </div>
+
+          <div class="col-lg-6 menu-item filter-creamy">
+            <div class="menu-content">
+              <a href="#">Rabri</a><span>$15.00 for 500gm</span>
+            </div>
+            <div class="menu-ingredients"><strong>রাবড়ি </strong>- A decadent tapestry of simmered sweetness, a cherished symphony of rich flavors</div>
+          </div>
+
+          <div class="col-lg-6 menu-item filter-creamy">
+            <div class="menu-content">
+              <a href="#">Ros Malai</a><span>$17.00 for 500gm(10 pc)</span>
+            </div>
+            <div class="menu-ingredients"><strong>রসমালাই </strong>- Creamy clouds of delight capturing the essence of sweet tranquility</div>
+          </div>
+
+          <div class="col-lg-6 menu-item filter-creamy">
+            <div class="menu-content">
+              <a href="#">Phirni</a><span>$15.00 for 500gm</span>
+            </div>
+            <div class="menu-ingredients"><strong>ফিরনি </strong>- Timeless indulgence in every velvety spoonful</div>
+          </div>
+
+          <div class="col-lg-6 menu-item filter-creamy">
+            <div class="menu-content">
+              <a href="#">Gajar Halua</a><span>$15.00 for 500gm</span>
+            </div>
+            <div class="menu-ingredients"><strong>গাজরের হালুয়া </strong>- Embrace the essence of tradition with Gajar Halwa: Sweet comfort in every spoonful</div>
+          </div>
+
+          <div class="col-lg-6 menu-item filter-creamy">
+            <div class="menu-content">
+              <a href="#">Suzi Safron Halwa</a><span>$12.00 for 500gm</span>
+            </div>
+            <div class="menu-ingredients"><strong>সুজি জাফরান হালুয়া </strong>- A golden treat weaving warmth and flavor effortlessly</div>
+          </div>
+
+          <div class="col-lg-6 menu-item filter-creamy">
+            <div class="menu-content">
+              <a href="#">Chhana Pora</a><span>$15.00 for 500gm</span>
+            </div>
+            <div class="menu-ingredients"><strong>ছানা পোড়া </strong>- Savor the essence of tradition with Chhena Poda: Odisha's caramelized delight in every bite</div>
+          </div>
+
+          <div class="col-lg-6 menu-item filter-creamy">
+            <div class="menu-content">
+              <a href="#">Rasabali</a><span>$17.00 for 500gm</span>
+            </div>
+            <div class="menu-ingredients"><strong>রসবলি </strong>- Indulge in Rasabali's rich heritage, a sweet symphony from Odisha's culinary traditions</div>
           </div>
 
         </div>
