Adding gallery images

--- a/index.html
+++ b/index.html
@@ -159,22 +159,26 @@
 
         <div class="row">
 
-          <div class="col-lg-5 align-items-stretch video-box" style='background-image: url("assets/img/about.jpg");'>
-            <a href="https://www.youtube.com/watch?v=jDDaplaOz7Q" class="venobox play-btn mb-4" data-vbtype="video" data-autoplay="true"></a>
+          <div class="col-lg-5 align-items-stretch video-box" style='background-image: url("assets/img/mou-about.jpg");'>
+            <!--a href="https://www.youtube.com/watch?v=jDDaplaOz7Q" class="venobox play-btn mb-4" data-vbtype="video" data-autoplay="true"></a-->
           </div>
 
           <div class="col-lg-7 d-flex flex-column justify-content-center align-items-stretch">
 
             <div class="content">
-              <h3>Eum ipsam laborum deleniti <strong>velit pariatur architecto aut nihil</strong></h3>
+              <h3>Hello everyone, Mousumi here<strong> Welcome to my world</strong></h3>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Duis aute irure dolor in reprehenderit
+                Hi there! I'm Mousumi, venturing into the oasis of Indian and Bengali sweets. 
+                I'm on a mission to blend tradition and innovation, crafting nostalgic treats with a modern twist. 
+                Passion drives me—I'm all about infusing health into every sugary delight without sacrificing authentic flavors.
               </p>
               <p class="fst-italic">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-                magna aliqua.
+                I'm not just a sweet-maker; I'm an explorer, constantly learning and experimenting. 
+                Join me on this flavorful journey, where every laddoo and sandesh is a tale of culture and wellness, 
+                bringing joy with every bite. Welcome to my world of sweet indulgence, where tradition meets innovation 
+                in the most delicious way!
               </p>
-              <ul>
+              <!--ul>
                 <li><i class="bx bx-check-double"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
                 <li><i class="bx bx-check-double"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
                 <li><i class="bx bx-check-double"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate trideta storacalaperda mastiro dolore eu fugiat nulla pariatur.</li>
@@ -183,7 +187,7 @@
                 Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
                 velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
                 culpa qui officia deserunt mollit anim id est laborum
-              </p>
+              </p-->
             </div>
 
           </div>
@@ -679,64 +683,64 @@
 
           <div class="col-lg-3 col-md-4">
             <div class="gallery-item">
-              <a href="assets/img/gallery/gallery-1.jpg" class="gallery-lightbox">
-                <img src="assets/img/gallery/gallery-1.jpg" alt="" class="img-fluid">
+              <a href="assets/img/gallery/gallery-9.jpg" class="gallery-lightbox">
+                <img src="assets/img/gallery/gallery-9.jpg" alt="" class="img-fluid thumb-post">
               </a>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-4">
             <div class="gallery-item">
-              <a href="assets/img/gallery/gallery-2.jpg" class="gallery-lightbox">
-                <img src="assets/img/gallery/gallery-2.jpg" alt="" class="img-fluid">
+              <a href="assets/img/gallery/gallery-10.jpg" class="gallery-lightbox">
+                <img src="assets/img/gallery/gallery-10.jpg" alt="" class="img-fluid thumb-post">
               </a>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-4">
             <div class="gallery-item">
-              <a href="assets/img/gallery/gallery-3.jpg" class="gallery-lightbox">
-                <img src="assets/img/gallery/gallery-3.jpg" alt="" class="img-fluid">
+              <a href="assets/img/gallery/gallery-11.jpg" class="gallery-lightbox">
+                <img src="assets/img/gallery/gallery-11.jpg" alt="" class="img-fluid thumb-post">
               </a>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-4">
             <div class="gallery-item">
-              <a href="assets/img/gallery/gallery-4.jpg" class="gallery-lightbox">
-                <img src="assets/img/gallery/gallery-4.jpg" alt="" class="img-fluid">
+              <a href="assets/img/gallery/gallery-12.jpg" class="gallery-lightbox">
+                <img src="assets/img/gallery/gallery-12.jpg" alt="" class="img-fluid thumb-post">
               </a>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-4">
             <div class="gallery-item">
-              <a href="assets/img/gallery/gallery-5.jpg" class="gallery-lightbox">
-                <img src="assets/img/gallery/gallery-5.jpg" alt="" class="img-fluid">
+              <a href="assets/img/gallery/gallery-13.jpg" class="gallery-lightbox">
+                <img src="assets/img/gallery/gallery-13.jpg" alt="" class="img-fluid thumb-post">
               </a>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-4">
             <div class="gallery-item">
-              <a href="assets/img/gallery/gallery-6.jpg" class="gallery-lightbox">
-                <img src="assets/img/gallery/gallery-6.jpg" alt="" class="img-fluid">
+              <a href="assets/img/gallery/gallery-14.jpg" class="gallery-lightbox">
+                <img src="assets/img/gallery/gallery-14.jpg" alt="" class="img-fluid thumb-post">
               </a>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-4">
             <div class="gallery-item">
-              <a href="assets/img/gallery/gallery-7.jpg" class="gallery-lightbox">
-                <img src="assets/img/gallery/gallery-7.jpg" alt="" class="img-fluid">
+              <a href="assets/img/gallery/gallery-15.jpg" class="gallery-lightbox">
+                <img src="assets/img/gallery/gallery-15.jpg" alt="" class="img-fluid thumb-post">
               </a>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-4">
             <div class="gallery-item">
-              <a href="assets/img/gallery/gallery-8.jpg" class="gallery-lightbox">
-                <img src="assets/img/gallery/gallery-8.jpg" alt="" class="img-fluid">
+              <a href="assets/img/gallery/gallery-16.jpg" class="gallery-lightbox">
+                <img src="assets/img/gallery/gallery-16.jpg" alt="" class="img-fluid thumb-post">
               </a>
             </div>
           </div>
