--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                 <h2 class="animate__animated animate__fadeInDown"><span>Sweet</span> Symphony</h2>
                 <p class="animate__animated animate__fadeInUp">Bringing happiness, one batch of sugary delights at a time. Sharing joy through every sugary bite – it's our sweet mission!</p>
                 <div>
-                  <a href="#menu" class="btn-menu animate__animated animate__fadeInUp scrollto">Our Menu</a>
+                  <a href="#menu" class="btn-menu animate__animated animate__fadeInUp scrollto">Menu</a>
                   <!--a href="#book-a-table" class="btn-book animate__animated animate__fadeInUp scrollto">Book a Table</a-->
                 </div>
               </div>
@@ -675,7 +675,7 @@
       <div class="container-fluid">
 
         <div class="section-title">
-          <h2>Some photos from <span>Our Restaurant</span></h2>
+          <h2>Some photos from <span>my kitchen</span></h2>
           <p>Ut possimus qui ut temporibus culpa velit eveniet modi omnis est adipisci expedita at voluptas atque vitae autem.</p>
         </div>
 
