--- a/index.html
+++ b/index.html
@@ -676,7 +676,7 @@
 
         <div class="section-title">
           <h2>Some photos from <span>my kitchen</span></h2>
-          <p>Ut possimus qui ut temporibus culpa velit eveniet modi omnis est adipisci expedita at voluptas atque vitae autem.</p>
+          <p>Here are some photos of my works, more to come</p>
         </div>
 
         <div class="row g-0">
