Changed landing image, added a new sweet and footer changes

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <div class="carousel-inner" role="listbox">
 
           <!-- Slide 1 -->
-          <div class="carousel-item active" style="background-image: url(assets/img/slide/slide-1.jpg);">
+          <div class="carousel-item active" style="background-image: url(assets/img/slide/slide-5.jpg);">
             <div class="carousel-container">
               <div class="carousel-content">
                 <h2 class="animate__animated animate__fadeInDown"><span>Sweet</span> Symphony</h2>
@@ -264,6 +264,15 @@
             </div>
             <div class="menu-ingredients">
               <strong>গোলাপ জামুন </strong>- Golden orbs of syrup-soaked delight: Gulab Jamun, sweet and divine!
+            </div>
+          </div>
+
+          <div class="col-lg-6 menu-item filter-solid">
+            <div class="menu-content">
+              <a href="#">Kala Jamun</a><span>$2.00/pc</span>
+            </div>
+            <div class="menu-ingredients">
+              <strong>কলো জাম </strong>-  Indulge in richness: Kalo Jaam, a sweet delight sensation!
             </div>
           </div>
 
@@ -888,7 +897,7 @@
           </div>
         </div>
 
-        <form action="forms/contact.php" method="post" role="form" class="php-email-form">
+        <form action="#" method="post" role="form" class="php-email-form">
           <div class="row">
             <div class="col-md-6 form-group">
               <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
@@ -919,17 +928,17 @@
   <!-- ======= Footer ======= -->
   <footer id="footer">
     <div class="container">
-      <h3>Delicious</h3>
-      <p>Et aut eum quis fuga eos sunt ipsa nihil. Labore corporis magni eligendi fuga maxime saepe commodi placeat.</p>
+      <h3>SweetSymphony</h3>
+      <p>We prepare more items, which are not listed. Please contact for more information.</p>
       <div class="social-links">
         <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
         <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-        <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
+        <a href="https://www.instagram.com/sweet.symphony.2023" class="instagram"><i class="bx bxl-instagram"></i></a>
         <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
         <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
       </div>
       <div class="copyright">
-        &copy; Copyright <strong><span>Delicious</span></strong>. All Rights Reserved
+        &copy; Copyright <strong><span>SweetSymphony</span></strong>. All Rights Reserved
       </div>
       
     </div>
