Adding menu information on ordering and delivery

--- a/index.html
+++ b/index.html
@@ -256,6 +256,11 @@
           </div>
         </div>
 
+        <div class="section-title">
+          <p>Please give us atleast 3-4 days between order and delivery</p>
+        </div>
+
+
         <div class="row menu-container">
 
           <div class="col-lg-6 menu-item filter-solid">
