--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>Check our tasty <span>Menu</span></h2>
+          <h2>Here is the tasty <span>Menu</span></h2>
         </div>
 
         <div class="row">
@@ -257,7 +257,7 @@
         </div>
 
         <div class="section-title">
-          <p>Please give us atleast 3-4 days between order and delivery</p>
+          <p>Please give me atleast 3-4 days between order and delivery</p>
         </div>
 
 
@@ -934,7 +934,7 @@
   <footer id="footer">
     <div class="container">
       <h3>SweetSymphony</h3>
-      <p>We prepare more items, which are not listed. Please contact for more information.</p>
+      <p>I can prepare more items, which are not listed. Please contact for more information.</p>
       <div class="social-links">
         <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
         <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
@@ -943,7 +943,7 @@
         <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
       </div>
       <div class="copyright">
-        &copy; Copyright <strong><span>SweetSymphony</span></strong>. All Rights Reserved
+        &copy; Copyright <strong><span>SweetSymphony.org</span></strong>. All Rights Reserved
       </div>
       
     </div>
