--- a/index.html
+++ b/index.html
@@ -110,18 +110,18 @@
           </div>
 
           <!-- Slide 2 -->
-          <!--div class="carousel-item" style="background-image: url(assets/img/slide/slide-2.jpg);">
+          <div class="carousel-item active" style="background-image: url(assets/img/slide/slide-5.jpg);">
             <div class="carousel-container">
               <div class="carousel-content">
-                <h2 class="animate__animated animate__fadeInDown">Lorem Ipsum Dolor</h2>
-                <p class="animate__animated animate__fadeInUp">Ut velit est quam dolor ad a aliquid qui aliquid. Sequi ea ut et est quaerat sequi nihil ut aliquam. Occaecati alias dolorem mollitia ut. Similique ea voluptatem. Esse doloremque accusamus repellendus deleniti vel. Minus et tempore modi architecto.</p>
+                <h2 class="animate__animated animate__fadeInDown"><span>Sweet</span> Symphony</h2>
+                <p class="animate__animated animate__fadeInUp">Bringing happiness, one batch of sugary delights at a time. Sharing joy through every sugary bite – it's our sweet mission!</p>
                 <div>
-                  <a href="#menu" class="btn-menu animate__animated animate__fadeInUp scrollto">Our Menu</a>
-                  <a href="#book-a-table" class="btn-book animate__animated animate__fadeInUp scrollto">Book a Table</a>
+                  <a href="#menu" class="btn-menu animate__animated animate__fadeInUp scrollto">Menu</a>
+                  <!--a href="#book-a-table" class="btn-book animate__animated animate__fadeInUp scrollto">Book a Table</a-->
                 </div>
               </div>
             </div>
-          </div-->
+          </div>
 
           <!-- Slide 3 -->
           <!--div class="carousel-item" style="background-image: url(assets/img/slide/slide-3.jpg);">
