Adding rasgulla and kamalbhog

--- a/index.html
+++ b/index.html
@@ -265,6 +265,24 @@
 
           <div class="col-lg-6 menu-item filter-solid">
             <div class="menu-content">
+              <a href="#">Rasgulla</a><span>$1.00/pc</span>
+            </div>
+            <div class="menu-ingredients">
+              <strong>রসগোল্লা </strong>- White, spongy, sweet and the staple bengali identity, The Rasgulla
+            </div>
+          </div>
+
+          <div class="col-lg-6 menu-item filter-solid">
+            <div class="menu-content">
+              <a href="#">Kamal Bhog</a><span>$1.50/pc</span>
+            </div>
+            <div class="menu-ingredients">
+              <strong>কমলভোগ </strong>- Everything about Rasgulla, but with a heart of orange and bliss of lemon
+            </div>
+          </div>
+
+          <div class="col-lg-6 menu-item filter-solid">
+            <div class="menu-content">
               <a href="#">Gulab Jamun</a><span>$1.50/pc</span>
             </div>
             <div class="menu-ingredients">
