Fix typo in delivery notice and add new menu item "Wonders of Nuts"

--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
         </div>
 
         <div class="section-title">
-          <p>Please give me atleast 3-4 days between order and delivery</p>
+          <p>Please give me at least 3-4 days between order and delivery</p>
         </div>
 
 
@@ -375,6 +375,13 @@
               <a href="#">Dates & Dry Fruit Barfi</a><span>$2.50/pc</span>
             </div>
             <div class="menu-ingredients"><strong>খেজুর ও ড্রাই ফ্রুট বরফি </strong>- Dates & Dry Fruit Barfi, a compact indulgence packed with the wholesome richness of dates and nuts, a tiny square of delight!</div>
+          </div>
+
+          <div class="col-lg-6 menu-item filter-solid">
+            <div class="menu-content">
+              <a href="#">Wonders of Nuts</a><span>$2.50/pc</span>
+            </div>
+            <div class="menu-ingredients"><strong>নারকেল কাজু পিস্তা বরফি </strong>- Coconut mixed with cashew with cottage cheese wrapping a delicious pistachio core</div>
           </div>
 
 
