Add "New" tag styling and apply to Wonders of Nuts item

--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
 
           <div class="col-lg-6 menu-item filter-solid">
             <div class="menu-content">
-              <a href="#">Wonders of Nuts</a><span>$2.50/pc</span>
+              <a href="#">Wonders of Nuts</a><span class="menu-tag">New</span><span>$2.50/pc</span>
             </div>
             <div class="menu-ingredients"><strong>নারকেল কাজু পিস্তা বরফি </strong>- Coconut mixed with cashew with cottage cheese wrapping a delicious pistachio core</div>
           </div>
