--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
 
           <div class="col-lg-6 menu-item filter-solid">
             <div class="menu-content">
-              <a href="#">Rasgulla</a><span>$1.50/pc</span>
+              <a href="#">Rasgulla</a><span>$2.00/pc</span>
             </div>
             <div class="menu-ingredients">
               <strong>রসগোল্লা </strong>- White, spongy, sweet and the staple bengali identity, The Rasgulla
@@ -387,7 +387,7 @@
 
           <div class="col-lg-6 menu-item filter-solid">
             <div class="menu-content">
-              <a href="#">Classic Jalebi</a><span>$15.00 for 500gm</span>
+              <a href="#">Classic Jalebi</a><span>$15.00 for 1lb</span>
             </div>
             <div class="menu-ingredients"><strong>জিলিপি </strong>- Jalebi, those crispy, syrupy spirals, a tiny burst of sweet joy in every twist!</div>
           </div>
@@ -395,63 +395,63 @@
 
           <div class="col-lg-6 menu-item filter-solid">
             <div class="menu-content">
-              <a href="#">Bonde</a><span>$15.00 for 500gm</span>
+              <a href="#">Bonde</a><span>$15.00 for 1lb</span>
             </div>
             <div class="menu-ingredients"><strong>বুন্দি </strong>- Bonde, the tiny golden globes of crispiness and sweetness, a pop of delight in every bite!</div>
           </div>
 
           <div class="col-lg-6 menu-item filter-creamy">
             <div class="menu-content">
-              <a href="#">Misti Doi</a><span>$18.00 for 500gm</span>
+              <a href="#">Misti Doi</a><span>$18.00 for 1lb</span>
             </div>
             <div class="menu-ingredients"><strong>মিষ্টি দই </strong>- Bengal's treasured delight: Mishti Doi, a golden-hued, creamy sweetness capturing hearts effortlessly</div>
           </div>
 
           <div class="col-lg-6 menu-item filter-creamy">
             <div class="menu-content">
-              <a href="#">Rabri</a><span>$20.00 for 500gm</span>
+              <a href="#">Rabri</a><span>$20.00 for 1lb</span>
             </div>
             <div class="menu-ingredients"><strong>রাবড়ি </strong>- A decadent tapestry of simmered sweetness, a cherished symphony of rich flavors</div>
           </div>
 
           <div class="col-lg-6 menu-item filter-creamy">
             <div class="menu-content">
-              <a href="#">Ros Malai</a><span>$20.00 for 500gm(10 pc)</span>
+              <a href="#">Ros Malai</a><span>$25.00 for 10 pc</span>
             </div>
             <div class="menu-ingredients"><strong>রসমালাই </strong>- Creamy clouds of delight capturing the essence of sweet tranquility</div>
           </div>
 
           <div class="col-lg-6 menu-item filter-creamy">
             <div class="menu-content">
-              <a href="#">Phirni</a><span>$20.00 for 500gm</span>
+              <a href="#">Phirni</a><span>$20.00 for 1lb</span>
             </div>
             <div class="menu-ingredients"><strong>ফিরনি </strong>- Timeless indulgence in every velvety spoonful</div>
           </div>
 
           <div class="col-lg-6 menu-item filter-creamy">
             <div class="menu-content">
-              <a href="#">Gajar Halua</a><span>$15.00 for 500gm</span>
+              <a href="#">Gajar Halua</a><span>$15.00 for 1lb</span>
             </div>
             <div class="menu-ingredients"><strong>গাজরের হালুয়া </strong>- Embrace the essence of tradition with Gajar Halwa: Sweet comfort in every spoonful</div>
           </div>
 
           <div class="col-lg-6 menu-item filter-creamy">
             <div class="menu-content">
-              <a href="#">Suzi Safron Halwa</a><span>$14.00 for 500gm</span>
+              <a href="#">Suzi Safron Halwa</a><span>$14.00 for 1lb</span>
             </div>
             <div class="menu-ingredients"><strong>সুজি জাফরান হালুয়া </strong>- A golden treat weaving warmth and flavor effortlessly</div>
           </div>
 
           <div class="col-lg-6 menu-item filter-creamy">
             <div class="menu-content">
-              <a href="#">Chhana Pora</a><span>$18.00 for 500gm</span>
+              <a href="#">Chhana Pora</a><span>$18.00 for 1lb</span>
             </div>
             <div class="menu-ingredients"><strong>ছানা পোড়া </strong>- Savor the essence of tradition with Chhena Poda: Odisha's caramelized delight in every bite</div>
           </div>
 
           <div class="col-lg-6 menu-item filter-creamy">
             <div class="menu-content">
-              <a href="#">Rasabali</a><span>$20.00 for 500gm</span>
+              <a href="#">Rasabali</a><span>$20.00 for 1lb</span>
             </div>
             <div class="menu-ingredients"><strong>রসবলি </strong>- Indulge in Rasabali's rich heritage, a sweet symphony from Odisha's culinary traditions</div>
           </div>
